feat: 项目适配 JDK 1.8
Co-authored-by: traeagent <traeagent@users.noreply.github.com>